* python-cherrypy wird nicht verwendet, daher Paket wieder aus den   Recommends entfernt * python-crypto als Abhängigkeit hinzugefügt * objects/host.py und objects/service.py angepasst   - liefern nun korrekt den poller_tag an das Livestatus-Modul * /var/run/shinken wird nun mit angelegt

--- a/debian/control
+++ b/debian/control
@@ -33,8 +33,8 @@ Breaks: shinken-core (<< 1.4), shinken (<< 1.4)
 Replaces: shinken-arbiter, shinken-broker, shinken-discovery,
  shinken-poller, shinken-reactionner, shinken-receiver,
  shinken-scheduler, shinken-core
-Depends: ${misc:Depends}, python, python-pycurl, python-openssl, adduser
-Recommends: monitoring-plugins-basic, bsd-mailx | mailx, python-cherrypy
+Depends: ${misc:Depends}, python, python-pycurl, python-openssl, python-crypto, adduser
+Recommends: monitoring-plugins-basic, bsd-mailx | mailx
 Description: Flexible monitoring tool - Common files
  Common files for shinken monitoring.
  .
